--- a/Hackathon_1_PMC.ipynb
+++ b/Hackathon_1_PMC.ipynb
@@ -187,17 +187,19 @@
         "    for i in string:\n",
         "        list_0.append(i)\n",
         "    arr=np.array(list_0)\n",
-        "    return list(np.unique(arr))\n",
+        "    return list(arr)\n",
         "\n",
         "def a_scramble(string1, string2):\n",
         "    x = convert_touniquelist(string1.lower())\n",
         "    y = convert_touniquelist(string2.lower())\n",
+        "    flag = False\n",
         "    for i in y:\n",
         "        if i not in x:\n",
         "            return False\n",
         "        else:\n",
-        "            return True\n",
-        "    \n",
+        "            x.remove(i)\n",
+        "            flag = True\n",
+        "    return flag\n",
         "    \n",
         "a_scramble(\"ticket\",\"chat\")\n",
         "\n",
