--- a/Hackathon_1_PMC.ipynb
+++ b/Hackathon_1_PMC.ipynb
@@ -355,7 +355,7 @@
         "    n=''\n",
         "    #output=''\n",
         "    c=0\n",
-        "    for i in string:     \n",
+        "    for i in string.lower():     \n",
         "        if(i==n):\n",
         "            c+=1\n",
         "            list_1[-1]=c\n",
@@ -365,8 +365,8 @@
         "            list_1.append(i)\n",
         "            list_1.append(c)\n",
         "    for j in list_1:\n",
-        "        #output += str(j)\n",
-        "        print(j,end='')\n",
+        "        output += str(j)\n",
+        "    print(output)\n",
         "\n",
         "compress('xxfvxcchserr')\n",
         "#Code ends here"
